--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
 # world.ac Jekyll Config File.
 # Careful messing with this if you don't know what it means! Find out more at jekyllrb.com
-# Last Major Release: 2.0.0
+# Last Major Release: 3.0.0
 
 # General Site Build Settings
 title: World Affairs Conference
 description: The WAC website!
 baseurl: ""
 url: "world.ac"
-github: "https://github.com/malsf21/world.ac"
+regurl: "https://reg.world.ac"
+github: "https://github.com/worldaffairsconference/world.ac"
 
 # Social Accounts
 email: mailto:wac@ucc.on.ca
