--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -5,7 +5,7 @@ general:
 
   wheniswac:
     question: "When is WAC?"
-    answer: "WAC spans two days: the Keynote Address, featuring a prominent member of the community, is held on the night of February 6th and open to the public; and the Conference Day, which is held on February 7th and is attended by delegates and faculty supervisors only."
+    answer: "WAC spans two days: the Keynote Address, featuring a prominent member of the community, is held on the night of February 5th and open to the public; and the Conference Day, which is held on February 6th and is attended by delegates and faculty supervisors only."
 
   whocanattend:
     question: "Who can attend WAC?"
@@ -13,7 +13,7 @@ general:
 
   whodowecontactformediainforation:
     question: "Who do we contact for media information?"
-    answer: "For any information regarding media coverage please contact the Head of the Department of Registration and Media: [Matthew Wang](mailto:matthew.wang@ucc.on.ca)."
+    answer: "For any information regarding media coverage please contact the Director General: [Matthew Wang](mailto:matthew.wang@ucc.on.ca)."
 
 registration:
   howcaniregistermyschool:
@@ -21,7 +21,7 @@ registration:
     answer: "This year, we are using an online registration system! Visit the link in the navbar to get started."
   whenisregistrationdue:
     question: "When is registration due?"
-    answer: "Registration is now closed. Online registration will close by January 30th, 23:59. We cannot handle late registration. We suggest you plan to register at least a week in advance of the deadline, to account for any errors or last-minute accomodations."
+    answer: "Registration is due on January the 19th. If you have any concerns, please contact us."
   howmuchdoesregcost:
     question: "How much does registration cost?"
     answer: "Registration costs $50 per student. If price is an issue, please let us know: we can arrange special accomodations."
@@ -30,7 +30,7 @@ registration:
     answer: "Please send a cheque for the total amount of students times $50 CAD payable to Upper Canada College. Our address is 200 Lonsdale Rd, Toronto, ON M4V 1W6. We will send an invoice to your registered email once we receive payment. If there are special accomodations, we will notify you in advance."
   whenisdue:
     question: "When are registration fees due?"
-    answer: "The WAC team recommends that advisors send their registration in by January 30th, to ensure that it arrives on a timely matter; the hard deadline for registration fees is the day of the conference (February 7th), and we will not let delegates inside the conference if fees are not paid by then."
+    answer: "The WAC team recommends that advisors send their registration fees in by January 30th, to ensure that it arrives on a timely matter; the hard deadline for registration fees is the day of the conference (February 6th), and we will not let delegates inside the conference if fees are not paid by then."
 
   caniregisterasanindividualstudent:
     question: "Can I register as an individual student?"
@@ -55,7 +55,7 @@ keynote address:
 
   whoisspeakingatthekeynoteaddress:
     question: "Who is speaking at the Keynote Address?"
-    answer: "Dr. Aubrey de Grey will be our Keynote Speaker: his talk will discuss radical life extension, with both medical and political implications."
+    answer: "We\'ll disclose this information soon!"
 
 conference day:
   whathappensduringtheconferenceday:
@@ -68,7 +68,7 @@ conference day:
 
   whattimesdoalloftheseeventshappen:
     question: "What times do all of these events happen?"
-    answer: "Our schedule is available on the schedule page of our website, as well as the delegate package available online."
+    answer: "We\'ll add a schedule page to our website as the conference nears."
 
   willstudentsbeprovidedlunch:
     question: "Will students be provided lunch?"
