--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -24,7 +24,7 @@ registration:
     answer: "Registration is due on January the 26th. If you have any concerns, please contact us."
   howmuchdoesregcost:
     question: "How much does registration cost?"
-    answer: "Registration costs $50 per student. If price is an issue, please let us know: we can arrange special accomodations."
+    answer: "Registration costs $50 per student, but there is an early-bird price of $45 per student if registration is completed before January 9th, 2018. If price is an issue, please let us know: we can arrange special accomodations."
   howtopay:
     question: "How is registration paid for?"
     answer: "Please send a cheque for the total amount of students times $50 CAD payable to Upper Canada College. Our address is 200 Lonsdale Rd, Toronto, ON M4V 1W6. We will send an invoice to your registered email once we receive payment. If there are special accomodations, we will notify you in advance."
