woops, changes the file extension

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -14,7 +14,7 @@ mwang:
   primary: Director General
   secondary: Web Developer
   bio: How do Web Developers mark their work? They Graphic De-sign it.
-  image: mattwang.png
+  image: mattwang.jpg
   email: matt@matthewwang.me
   github: malsf21
   site: https://matthewwang.me
