now that our builds are supposed to be stable, re adding rake

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ rvm:
 
 script:
   - ./setup.sh
-# disable rake for now as our builds are unstable anyways
-#  - bundle exec rake test
+ - bundle exec rake test
 
 branches:
   only:
