--- a/_data/speaker.yml
+++ b/_data/speaker.yml
@@ -2,3 +2,18 @@ csoon:
   name: Coming Soon
   pic: avatar.png
   bio: This speaker's information is coming soon!
+
+ccodsi:
+  name: Caroline Codsi
+  pic: ccodsi.png
+  bio: "Caroline Codsi was born in Beirut Lebanon and lived in Montreal. She is Senior Vice-President and General Manager, Eastern Canada for Cira Medical Services. Citizen of the world, she was born in Beirut, has lived on 3 continents and is perfectly fluent in 4 languages. She is the head behind Women in Governance, also known as La Gouvernance au Feminin, a non-for-profit organization that supports women in their leadership development, career enhancement and access to board seats. Her movement has inspired many in corporate positions to break the glass ceiling. Her story is one of ambition, resilience and the true meaning of never giving up. Caroline is also a multiple award recipient from the Quebec Business Women Network, the Arab Women Trophy, Premières en Affaires to name just a few. She was also recipient of a Gender Equality Award by the United Nations Women National Committee. Caroline was ranked among the Top 100 Most Powerful Women in Canada, the Top 75 Canadian Immigrants and the Top 20 Diversity Leading Figures of Quebec"
+
+jsumner:
+  name: "Dr. Jennifer Sumner"
+  pic: jsumner.png
+  bio: "In an exponentially expanding world, will we be able to provide enough food and resources for future generations? Dr Jennifer Sumner believes, we can. This year at WAC she will be co-leading “The Global Food Crisis” plenary and helping us to understand how in an increasingly expanding and globalizing world, what methods and policies governments and the agricultural community can put in place to help the next generations survive. Dr. Jennifer Sumner is currently a professor and lecturer in the department for Higher Education and Leadership at the Ontario Institute for Studies in Education at the University of Toronto. She received a bachelor's degree at the University of Toronto and went on to earn a diploma in agriculture and a PHD in rural studies both from the University of Guelph. Since then she has researched or taught in an astounding eight separate subjects at University of Toronto. She is an expert in the fields Sustainability, Food and sustainable food systems, Organic agriculture, Globalization, Rural communities/rural women and the civil commons and the social economy all of which pertain to important issues facing society and to this year’s theme of “Paradigm shifts”. Since 2005 she has co-written eight novels discussing environmental and agricultural sustainability policy, in addition she has received seven research grants for her work in sustainable food systems and how organic agriculture affects the rural economy."
+
+jbass:
+  name: John Bass
+  pic: jbass.png
+  bio: "John Bass is the founder and CEO of Hashed health - a Nashville, Tennessee based startup that is focusing on the applications of blockchain in the healthcare industry. After graduating from University of North Carolina at Chapel Hill in 1994 with a Bachelor’s in Chemistry, John went on to working numerous jobs in the healthcare industry, including the Senior Product Manager at Global Healthcare Exchange and the Chief Operating Officer at InVivoLink."
