--- a/_data/speaker.yml
+++ b/_data/speaker.yml
@@ -17,3 +17,17 @@ jbass:
   name: John Bass
   pic: jbass.png
   bio: "John Bass is the founder and CEO of Hashed health - a Nashville, Tennessee based startup that is focusing on the applications of blockchain in the healthcare industry. After graduating from University of North Carolina at Chapel Hill in 1994 with a Bachelor’s in Chemistry, John went on to working numerous jobs in the healthcare industry, including the Senior Product Manager at Global Healthcare Exchange and the Chief Operating Officer at InVivoLink."
+
+rmedhora:
+  name: Rohinton P. Medhora
+  pic: rmedhora.jpg
+  bio: "Rohinton P. Medhora is president of the Centre for International Governance Innovation (CIGI), joining in 2012. He served on CIGI's former International Board of Governors from 2009 to 2014. Previously, he was vice president of programs at Canada’s International Development Research Centre.
+
+  Rohinton received his doctorate in economics in 1988 from the University of Toronto, where he also subsequently taught for a number of years. In addition to his Ph.D., Rohinton earned his B.A. and M.A. at the University of Toronto, where he majored in economics. His fields of expertise are monetary and trade policy, international economic relations, aid effectiveness and development economics. He has published extensively on these issues in professional and non-technical journals, and produced two books: Finance and Competitiveness in Developing Countries (Routledge, 2001); and Financial Reform in Developing Countries (Macmillan, 1998), which he co-edited with José Fanelli. In 2013, he was co-editor of Canada-Africa Relations: Looking Back, Looking Ahead, which is volume 27 in the influential Canada Among Nations book series. In 2014, he co-edited International Development: Ideas, Experience, and Prospects (Oxford University Press) and Crisis and Reform: Canada and the International Financial System, which is volume 28 in the Canada Among Nations book series.
+
+  Rohinton was recently named as a member of the Commission on Global Economic Transformation co-chaired by Nobel economics Laureates Michael Spence and Joseph Stiglitz. He serves on the boards of the Institute for New Economic Thinking, the Partnership for African Social and Governance Research and the Balsillie School of International Affairs and on the advisory boards of the McLuhan Centre at the University of Toronto and the WTO Chairs Program."
+
+rpulfer:
+  name: Rachel Pulfer
+  pic: rpulfer.jpg
+  bio: "Rachel Pulfer is the Executive Director of Journalists for Human Rights (JHR), Canada’s leading media development organization, with which she has been managing projects in Liberia, Democratic Republic of Congo, Ghana, Malawi, and Sierra Leone. As a humanitarian who grew up in Swaziland, Lesotho and Papua New Guinea, Ms. Pulfer holds JHR’s mission to heart – empowering journalists to cover local human rights issues ethically and effectively. Prior to JHR, Ms. Pulfer won the 2009-2010 Webster/McConnell Canadian Journalism Fellowship. She has also contributed to the Globe and Mail, the Ottawa Citizen, the Walrus, the National Post, the Montreal Gazette, Toronto Life, Azure magazine and numerous other publications. Ms. Pulfer has a Bachelor of Applied Arts from Ryerson University's School of Journalism and a BA in History and Political Science from McGill University. Recognized as a leading voice in the role of media as a force for social change, Ms. Pulfer will discuss China’s different forms of influence on the African continent as well as human rights considerations."
