--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -158,10 +158,10 @@ amancini:
   image: avatar.jpg
 
 areeves:
-  name: Alex Phillip-Reeves
+  name: Alex Colville-Reeves
   primary: Plenary Head
   secondary: Feminism
-  image: areeves.jpg
+  image: avatar.jpg
 
 kparamaanantham:
   name: Kohilan Paramaanantham
